--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Code Basics</h1>
-  <p>Бесплатные уроки по программированию и HTML для новичков</p>
+  <header>
+		<button type="button" class="btn btn-secondary">МИНИМАЛИЗМ</button>
+		<button type="button" class="btn btn-secondary">ОБОИ</button>
+	</header>
+	<main></main>
+	<footer></footer>
   <script src = "js.js"></script>
 </body>
 </html>
